src/objects/Key_Risk_Metric__c.object
<CustomObject>
    <fields>
        <fullName>App_name__c</fullName>
        <label>Orgnization Name</label>
        <picklist>
            <picklistValues>
                <fullName>UGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physicians Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FWD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business / Growth Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings / Margin Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation / Compliance Risks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>IF(ISPICKVAL( Exceed_the_threshold__c , &quot;Yes&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_record__c</fullName>
        <formula>IF(ISBLANK(  Count__c  ) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exceed_the_threshold__c</fullName>
        <label>Exceed the threshold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Risk_Metric_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Risk Metric Measure</label>
        <referenceTo>Key_Risk_Metric_Measure__c</referenceTo>
        <relationshipLabel>Key Risk Metrics</relationshipLabel>
        <relationshipName>Key_Risk_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_record__c</fullName>
        <label>Latest record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measured_Unit__c</fullName>
        <label>Measured Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Ratio%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Appetite__c</fullName>
        <label>Risk Appetite</label>
        <referenceTo>Risk_Appetite_Statement__c</referenceTo>
        <relationshipLabel>Key Risk Metrics</relationshipLabel>
        <relationshipName>Key_Risk_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>UGI_Risk__c</referenceTo>
        <relationshipLabel>Key Risk Metrics</relationshipLabel>
        <relationshipName>Key_Risk_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_name__c</fullName>
        <formula>UGI_Risk__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quantitative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualitative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UGI_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UGI Risk</label>
        <referenceTo>UGI_Risk__c</referenceTo>
        <relationshipLabel>Key Risk Metrics (UGI Risk)</relationshipLabel>
        <relationshipName>Key_Risk_Metrics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Risk Metric</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>UGI</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Frequency__c</columns>
        <columns>Measured_Unit__c</columns>
        <columns>Exceed_the_threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>App_name__c</field>
            <operation>equals</operation>
            <value>UGI</value>
        </filters>
        <label>UGI</label>
    </listViews>
    <nameField>
        <label>Key Risk Metric</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Risk Metrics</pluralLabel>
    <recordTypes>
        <fullName>FWD</fullName>
        <active>true</active>
        <label>FWD</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>UGI</fullName>
        <active>true</active>
        <label>UGI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>